fix: Adjust padding and layout in styles, update header structure for better responsiveness

--- a/header.html
+++ b/header.html
@@ -13,7 +13,7 @@
   <body>
     <div class="subheader text-white py-2 small">
       <div class="container d-flex">
-        <div style="flex: grow 1;">
+        <div >
           <a
             href="mailto:service@premier-datacom.com"
             class="text-white text-decoration-none"
@@ -35,7 +35,8 @@
         </li>
         <div>
           <a href="tel:7376157037" class="text-white text-decoration-none">
-          <i class="bi bi-telephone"></i> (737) 615-7037</div>
+          <i class="bi bi-telephone"></i> (737) 615-7037
+        </div>
         </a>
       </div>
     </div>
