--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
                 Delivering Trusted Connectivity Solutions
               </span>
             </div>
-            <h1 class="display-5 fw-bold">
-              Empowering Fast,<br />
+            <h1 class="display-5 fw-bold text-uppercase">
+              Empowering Fast,<span class="d-none d-md-block"></span>
               Seamless Connectivity
             </h1>
             <p class="lead mt-3">
-              Premier Datacom delivers cutting-edge communication<br />
+              Premier Datacom delivers cutting-edge communication<span class="d-none d-md-block"></span>
               infrastructure across businesses and industries.
             </p>
             <a href="/contact-us.html" class="btn btn-light btn-lg mt-3"
@@ -189,7 +189,7 @@
       />
 
       <div class="container">
-        <div class="row">
+        <div class="row py-4">
           <h3 class="fw-bold mb-3">Who We Are</h3>
           <div class="col-md-5 mb-4 mb-md-0">
             <div class="d-flex align-items-center gap-1">
@@ -466,7 +466,7 @@
           slidesPerView: 1,
           breakpoints: {
             768: { slidesPerView: 1 },
-            992: { slidesPerView: 1.6 },
+            992: { slidesPerView: 1.7 },
             1200: { slidesPerView: 2.1 },
           },
           on: {
