Refactor header and navigation structure; add sticky header functionality and scroll animations
- Updated header.html to enhance layout with email, address, and phone number sections.
- Implemented a mobile drawer menu for navigation with toggle functionality.
- Added sticky header behavior to maintain visibility during scrolling.
- Integrated scroll animations for various elements across multiple pages.
- Updated index.html and service pages to include new scripts for scroll animations.
- Created auto-scroll and debug scripts to manage animations and footer image checks.
- Ensured consistent styling and spacing adjustments for hero sections and content.

--- a/contact-us.html
+++ b/contact-us.html
@@ -21,6 +21,7 @@
           document.getElementById("header").innerHTML = data;
         });
     </script>
+    <script src="/js/sticky-header.js"></script>
 
     <div style="background-color: #f3f4f5">
       <div class="py-3 biz-form-wrapper px-4 container">
@@ -198,7 +199,7 @@
     </div>
     <div id="footer"></div>
     <script>
-      fetch("footer.html")
+      fetch("/footer.html")
         .then((response) => response.text())
         .then((data) => {
           document.getElementById("footer").innerHTML = data;
