--- a/footer.html
+++ b/footer.html
@@ -19,12 +19,14 @@
       <img
         src="/PREMIER-DATACOM/images/top-right.png"
         alt="top right deco"
-        class="bg-deco-top d-none d-md-block"
+        class="bg-deco-top d-none d-md-block scroll-slide-right"
+        data-delay="200"
       />
       <img
         src="/PREMIER-DATACOM/images/bottom-left.png"
         alt="bottom left deco"
-        class="bg-deco-bottom d-none d-md-block"
+        class="bg-deco-bottom d-none d-md-block scroll-slide-left"
+        data-delay="300"
       />
 
       <div class="container">
@@ -102,7 +104,7 @@
             <h5 class="custom-footer-heading">Contact Us</h5>
             <ul class="custom-footer-list custom-footer-contact">
               <li class="custom-footer-link">
-                <i class="bi bi-geo-alt"></i> 9411 Neils Thompson Drive<br />
+                <i class="bi bi-geo-alt"></i> 9411 Neils Thompson Drive,<br />
                 Austin, TX 78758
               </li>
               <li>
@@ -116,7 +118,7 @@
               <li class="custom-footer-link">
                 <i class="bi bi-telephone"></i>
                 <a href="tel:7376157037" style="text-decoration: none;">
-                  (737) 615-7037
+                  +1 (737) 615-7037
                 </a>
               </li>
               <li>
@@ -132,5 +134,7 @@
     <div class="custom-footer-bottom py-4 text-white">
       © 2005 – 2024 Premier DataCom, Inc. All rights reserved.
     </div>
+    <!-- Scroll Animations -->
+    <script src="/js/scroll-animations.js"></script>
   </body>
 </html>
