--- a/about-us.html
+++ b/about-us.html
@@ -24,6 +24,7 @@
           document.getElementById("header").innerHTML = data;
         });
     </script>
+    <script src="/js/sticky-header.js"></script>
 
     <!-- Hero Section -->
     <section class="hero-section text-white d-flex align-items-center" style="background: url(/PREMIER-DATACOM/images/about-use-hero-section.webp) no-repeat center center/cover;">
@@ -54,7 +55,7 @@
     <div class="container" style="margin-top: 50px">
      
       <div class="row about-row-equal-height p-4">
-         <div class="d-flex align-items-center gap-3 mb-3">
+         <div class="d-flex align-items-center gap-3 mb-3 p-0">
         <img
           src="/PREMIER-DATACOM/images/Black Border.svg"
           alt="Border"
@@ -132,12 +133,14 @@
       <img
         src="/PREMIER-DATACOM/images/top-right.png"
         alt="top right deco"
-        class="bg-deco-top d-none d-md-block"
+        class="bg-deco-top d-none d-md-block scroll-slide-right"
+        data-delay="200"
       />
       <img
         src="/PREMIER-DATACOM/images/bottom-left.png"
         alt="bottom left deco"
-        class="bg-deco-bottom d-none d-md-block"
+        class="bg-deco-bottom d-none d-md-block scroll-slide-left"
+        data-delay="300"
       />
 
       <div class="contact-section">
@@ -442,5 +445,9 @@
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Scroll Animations -->
+    <script src="/js/scroll-animations.js"></script>
+    <!-- Auto Scroll Animations -->
+    <script src="/js/auto-scroll-animations.js"></script>
   </body>
 </html>
