--- a/blog.html
+++ b/blog.html
@@ -24,6 +24,7 @@
           document.getElementById("header").innerHTML = data;
         });
     </script>
+    <script src="/js/sticky-header.js"></script>
 
     <!-- Hero Section -->
     <section
@@ -133,7 +134,7 @@
     </script>
     <div id="footer"></div>
     <script>
-      fetch("footer.html")
+      fetch("/footer.html")
         .then((response) => response.text())
         .then((data) => {
           document.getElementById("footer").innerHTML = data;
