--- a/our-services/access-control/index.html
+++ b/our-services/access-control/index.html
@@ -24,6 +24,7 @@
           document.getElementById("header").innerHTML = data;
         });
     </script>
+    <script src="/js/sticky-header.js"></script>
 
     <!-- Hero Section -->
     <section
@@ -58,9 +59,9 @@
       </div>
     </section>
 
-    <div class="container" style="margin-top: 50px">
+    <div class="container mt-5">
       <div class="row about-row-equal-height p-4">
-        <div class="d-flex align-items-center gap-3 mb-4">
+        <div class="d-flex  gap-3 mb-4 p-0">
           <img
             src="/PREMIER-DATACOM/images/Black Border.svg"
             alt="Border"
@@ -512,9 +513,21 @@
         .then((response) => response.text())
         .then((data) => {
           document.getElementById("footer").innerHTML = data;
+          // Trigger scroll animations after footer is loaded
+          setTimeout(() => {
+            if (window.refreshAnimationsForDynamicContent) {
+              window.refreshAnimationsForDynamicContent();
+            } else if (window.scrollAnimations) {
+              window.scrollAnimations.refresh();
+            }
+          }, 200);
         });
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Scroll Animations -->
+    <script src="/js/scroll-animations.js"></script>
+    <!-- Auto Scroll Animations -->
+    <script src="/js/auto-scroll-animations.js"></script>
   </body>
 </html>
