feat: Add address information to the mobile drawer menu

--- a/header.html
+++ b/header.html
@@ -130,6 +130,10 @@
           <i class="bi bi-telephone"></i>
           <a href="tel:7376157037">+1 (737) 615-7037</a>
         </div>
+        <div class="drawer-contact-item">
+          <i class="bi bi-geo-alt"></i>
+          <span>9411 Neils Thompson Drive, Austin, TX 78758</span>
+        </div>
       </div>
     </div>
   </div>
