--- a/header.html
+++ b/header.html
@@ -92,11 +92,13 @@
 <div id="drawerMenu" class="drawer-menu">
   <div class="drawer-header">
     <div class="drawer-logo">
+      <a href="/">
       <img
         src="/PREMIER-DATACOM/images/footerlogo.svg"
         alt="Premier Datacom"
         width="150"
       />
+      </a>
     </div>
     <button class="drawer-close" id="drawerClose">
       <i class="bi bi-x-lg"></i>
